# diablo_bot

./: PROJECT_CONTEXT.md  README.md  pyproject.toml
configs/loops/: farm_v1.yaml
scripts/: capture_samples.py  probe_hsv.py  replay_farm_v1.py  run_farm_v1.py  tune_indicator.py
src/diablo_bot/: __init__.py  registries.py
src/diablo_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
